src/objects/Funding_Position_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_And_Liability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset And Liability</label>
        <referenceTo>Asset_And_Liability__c</referenceTo>
        <relationshipLabel>Funding Position Details</relationshipLabel>
        <relationshipName>Funding_Position_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Type__c</fullName>
        <label>Detail Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan to Repay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Debts to Repay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Accrued Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Stamp Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Position__c</fullName>
        <label>Funding Position</label>
        <referenceTo>Funding_Position__c</referenceTo>
        <relationshipLabel>Funding Position Details</relationshipLabel>
        <relationshipName>Funding_Position_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Use_User_Input_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use User Input Value</label>
        <type>Checkbox</type>
    </fields>
    <label>Funding Position Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funding Position Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Position Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>